--- a/src/app/pages/parking-state/parking-state.component.scss
+++ b/src/app/pages/parking-state/parking-state.component.scss
@@ -1,145 +1,152 @@
-header {
-    background-color: aliceblue;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 15vh;
-    .logo-container {
-        font-size: 3rem;
-        color: blue;
-        border-bottom: 3px solid blue;
-    }
-    a {
-        border-radius: 50%;
-        overflow: hidden;
-        border: 3px solid #000;
-
-        img {
-            width: 50px;
-            background-color: white;
-        }
-    }
-
-    .header-info-container {
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        gap: 30px;
-
-        p {
-            font-size: 1.5rem;
-            color: blue;
-        }
-    }
+body {
+  background-color: #333;
+  height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-
-.page-parking-state{
-    height: 100vh;
-    background: radial-gradient(circle, #0a192f, #020c1b 60%);
-    display: flex;
-    flex-direction: column;
-  }
-  
-  header{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding-top: 10px;
-    padding-right: 20px;
-  }
-  
-  .h2-app{
-    width: 25%;
-    text-align: end;
+header {
+  background-color: #333;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 15vh;
+  .logo-container {
     font-size: 3rem;
-    position: relative;
-    color: #f1f1f1;
-    text-decoration: none;
-    padding-right: 10px;
-    &::after {
-      content: "";
-      position: absolute;
-      right: 0;
-      top: 65px;
-      width: 100%;
-      height: 5px;
-      background-color: #f1f1f1;
+    color: blue;
+    border-bottom: 3px solid blue;
+  }
+  a {
+    border-radius: 50%;
+    overflow: hidden;
+    border: 3px solid #000;
+
+    img {
+      width: 50px;
+      background-color: white;
     }
   }
-  
-  nav{
+
+  .header-info-container {
     display: flex;
-    width: 15%;
-    flex-direction: row;
+    justify-content: space-around;
     align-items: center;
-    justify-content: space-between;  
+    gap: 30px;
+
+    p {
+      font-size: 1.5rem;
+      color: blue;
+    }
   }
-  
-  .page-name{
-    color: #f1f1f1;
-    font-size: 1.25rem; 
-  }
-  
-  .profile-pic{
-    background-color: aliceblue;
-    border-radius: 55%;
-    width: 30px;
-  }
-  
-  main{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    margin: 50px;
-  }
-  
-  .table-container{
-    max-height: 480px;
+}
+
+.page-parking-state {
+  height: 100vh;
+  background: radial-gradient(circle, #0a192f, #020c1b 60%);
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-top: 10px;
+  padding-right: 20px;
+}
+
+.h2-app {
+  width: 25%;
+  text-align: end;
+  font-size: 3rem;
+  position: relative;
+  color: #f1f1f1;
+  text-decoration: none;
+  padding-right: 10px;
+  &::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    top: 65px;
     width: 100%;
-    overflow-y: auto;
+    height: 5px;
+    background-color: #f1f1f1;
   }
-  
-  .styled-table {
-    width: 100%;
-    border-collapse: collapse;
-    align-self: center;
-    justify-items: center;
-  }
-  
-  .styled-table th, 
-  .styled-table td {
+}
+
+nav {
+  display: flex;
+  width: 15%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.page-name {
+  color: #f1f1f1;
+  font-size: 1.25rem;
+}
+
+.profile-pic {
+  background-color: aliceblue;
+  border-radius: 55%;
+  width: 30px;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin: 50px;
+}
+
+.table-container {
+  max-height: 480px;
+  width: 100%;
+  overflow-y: auto;
+  border-radius: 15px;
+}
+
+.styled-table {
+  width: 100%;
+  border-collapse: collapse;
+  align-self: center;
+  justify-items: center;
+  th, td {
+    font-size: 1.5rem;
     padding: 10px;
-    border: 1px solid #ddd;
-    text-align: left;
+    text-align: center;
   }
-  
-  .styled-table tr:nth-child(odd) {
+  th {
+    font-weight: bold;
+  }
+  tr:nth-child(odd) {
     background-color: white;
   }
-  
-  .styled-table tbody {
+  tbody {
     background-color: #ddd;
     color: black;
   }
-  
-  .available{
-    background-color: rgb(86, 246, 193);
-  }
-  
-  .btn-deleteThat{
-    background-color: none;
-  }
-  
-  .btn-container{
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-  }
-  
-  .btn-admin{
-    height: 40px;
-    width: 100px;
-    border-radius: 4px;
-  }
+}
+
+
+
+.available {
+  background-color: rgb(86, 246, 193);
+}
+
+.btn-deleteThat {
+  background-color: none;
+}
+
+.btn-container {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.btn-admin {
+  height: 40px;
+  width: 100px;
+  border-radius: 4px;
+}
