parking-state design

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -45,13 +45,13 @@
       />
       <div class="error-message">Minimum 6 characters at least 1 Alphabet and 1 number</div>
     </div>
-    <button type="submit" class="my-form__button">
-      <a [routerLink]="['./parking-state']">Log in</a>
+    <button [routerLink]="['/parking-state']" type="submit" class="my-form__button">
+      <a>Log in</a>
     </button>
     <div class="my-form__actions">
       <div class="my-form__row">
         <span>Don't have an account?</span>
-        <a href="#" title="Create Account">
+        <a title="Create Account">
           Sign Up
         </a>
       </div>
