--- a/src/app/pages/parking-state/parking-state.component.scss
+++ b/src/app/pages/parking-state/parking-state.component.scss
@@ -102,16 +102,21 @@ main {
 
 .table-container {
   max-height: 480px;
-  width: 100%;
+  width: 80%;
   overflow-y: auto;
   border-radius: 15px;
 }
 
-.styled-table {
+.parking-table {
   width: 100%;
   border-collapse: collapse;
   align-self: center;
   justify-items: center;
+
+  thead tr {
+    border-bottom: solid black;
+    background-color: #e5efff;
+  }
   th, td {
     font-size: 1.5rem;
     padding: 10px;
@@ -129,15 +134,42 @@ main {
   }
 }
 
+.actions-container {
+  display: flex;
+  justify-content: center;
+
+  button {
+    border: none;
+    background-color: blue;
+    color: #fff;
+    border-radius: 20px;
+    padding: 10px;
+    font-size: 1.5rem;
+    margin: 0 15px;
+  }
+
+  .btn-deleteThat {
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(255, 0, 0);
+    border: none;
+  
+    i, .fi {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+  }
 
 
 .available {
-  background-color: rgb(86, 246, 193);
+  background-color: rgb(14, 201, 11);
 }
 
-.btn-deleteThat {
-  background-color: none;
-}
+
 
 .btn-container {
   display: flex;
