--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,3 +47,13 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+a {
+	color: red;
+	text-decoration: none;
+}
+
+.link-active {
+	color: blue;
+
+}
