--- a/src/app/pages/parking-state/parking-state.component.scss
+++ b/src/app/pages/parking-state/parking-state.component.scss
@@ -1,184 +1,192 @@
-body {
-  background-color: #333;
-  height: 100vh;
-  font-family: Arial, Helvetica, sans-serif;
-}
+@use "./../../../../Public/styles/tables.scss";
 
-header {
-  background-color: #333;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  min-height: 15vh;
-  .logo-container {
-    font-size: 3rem;
-    color: blue;
-    border-bottom: 3px solid blue;
-  }
-  a {
-    border-radius: 50%;
-    overflow: hidden;
-    border: 3px solid #000;
+// body {
+//   background-color: #333;
+//   height: 100vh;
+//   font-family: Arial, Helvetica, sans-serif;
+// }
 
-    img {
-      width: 50px;
-      background-color: white;
-    }
-  }
+// header {
+//   background-color: #333;
+//   display: flex;
+//   justify-content: space-between;
+//   align-items: center;
+//   min-height: 15vh;
+//   .logo-container {
+//     font-size: 3rem;
+//     color: blue;
+//     border-bottom: 3px solid blue;
+//   }
+//   a {
+//     border-radius: 50%;
+//     overflow: hidden;
+//     border: 3px solid #000;
 
-  .header-info-container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 30px;
+//     img {
+//       width: 50px;
+//       background-color: white;
+//     }
+//   }
 
-    p {
-      font-size: 1.5rem;
-      color: blue;
-    }
-  }
-}
+//   .header-info-container {
+//     display: flex;
+//     justify-content: space-around;
+//     align-items: center;
+//     gap: 30px;
 
-.page-parking-state {
-  height: 100vh;
-  background: radial-gradient(circle, #0a192f, #020c1b 60%);
-  display: flex;
-  flex-direction: column;
-}
+//     p {
+//       font-size: 1.5rem;
+//       color: blue;
+//     }
+//   }
+// }
 
-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding-top: 10px;
-  padding-right: 20px;
-}
+// .page-parking-state {
+//   height: 100vh;
+//   background: radial-gradient(circle, #0a192f, #020c1b 60%);
+//   display: flex;
+//   flex-direction: column;
+// }
 
-.h2-app {
-  width: 25%;
-  text-align: end;
-  font-size: 3rem;
-  position: relative;
-  color: #f1f1f1;
-  text-decoration: none;
-  padding-right: 10px;
-  &::after {
-    content: "";
-    position: absolute;
-    right: 0;
-    top: 65px;
-    width: 100%;
-    height: 5px;
-    background-color: #f1f1f1;
-  }
-}
+// header {
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: space-between;
+//   padding-top: 10px;
+//   padding-right: 20px;
+// }
 
-nav {
-  display: flex;
-  width: 15%;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
+// .h2-app {
+//   width: 25%;
+//   text-align: end;
+//   font-size: 3rem;
+//   position: relative;
+//   color: #f1f1f1;
+//   text-decoration: none;
+//   padding-right: 10px;
+//   &::after {
+//     content: "";
+//     position: absolute;
+//     right: 0;
+//     top: 65px;
+//     width: 100%;
+//     height: 5px;
+//     background-color: #f1f1f1;
+//   }
+// }
 
-.page-name {
-  color: #f1f1f1;
-  font-size: 1.25rem;
-}
+// nav {
+//   display: flex;
+//   width: 15%;
+//   flex-direction: row;
+//   align-items: center;
+//   justify-content: space-between;
+// }
 
-.profile-pic {
-  background-color: aliceblue;
-  border-radius: 55%;
-  width: 30px;
-}
+// .page-name {
+//   color: #f1f1f1;
+//   font-size: 1.25rem;
+// }
 
-main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-  margin: 50px;
-}
+// .profile-pic {
+//   background-color: aliceblue;
+//   border-radius: 55%;
+//   width: 30px;
+// }
 
-.table-container {
-  max-height: 480px;
-  width: 80%;
-  overflow-y: auto;
-  border-radius: 15px;
-}
+// main {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   gap: 20px;
+//   margin: 50px;
+// }
 
-.parking-table {
-  width: 100%;
-  border-collapse: collapse;
-  align-self: center;
-  justify-items: center;
+// .table-container {
+//   max-height: 480px;
+//   width: 80%;
+//   overflow-y: auto;
+//   border-radius: 15px;
+// }
 
-  thead tr {
-    border-bottom: solid black;
-    background-color: #e5efff;
-  }
-  th, td {
-    font-size: 1.5rem;
-    padding: 10px;
-    text-align: center;
-  }
-  th {
-    font-weight: bold;
-  }
-  tr:nth-child(odd) {
-    background-color: white;
-  }
-  tbody {
-    background-color: #ddd;
-    color: black;
-  }
-}
+// .parking-table {
+//   width: 100%;
+//   border-collapse: collapse;
+//   align-self: center;
+//   justify-items: center;
 
-.actions-container {
-  display: flex;
-  justify-content: center;
+//   thead tr {
+//     border-bottom: solid black;
+//     background-color: gray;
+//   }
+//   th, td {
+//     font-size: 1.5rem;
+//     padding: 10px;
+//     text-align: center;
+//   }
+//   th {
+//     font-weight: bold;
+//   }
+//   tr:nth-child(odd) {
+//     background-color: white;
+//   }
+//   tbody {
+//     background-color: #ddd;
+//     color: black;
+//   }
+// }
 
-  button {
-    border: none;
-    background-color: blue;
-    color: #fff;
-    border-radius: 20px;
-    padding: 10px;
-    font-size: 1.5rem;
-    margin: 0 15px;
-  }
+// .actions-container {
+//   display: flex;
+//   justify-content: center;
 
-  .btn-deleteThat {
-    width: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(255, 0, 0);
-    border: none;
+//   button {
+//     border: none;
+//     background-color: blue;
+//     color: #fff;
+//     border-radius: 20px;
+//     padding: 10px;
+//     font-size: 1.5rem;
+//     margin: 0 15px;
+//   }
+
+//   .btn-deleteThat {
+//     width: 50px;
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     background-color: rgb(255, 0, 0);
+//     border: none;
   
-    i, .fi {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-    }
-  }
+//     i, .fi {
+//         display: flex;
+//         justify-content: center;
+//         align-items: center;
+//       }
+//     }
+//   }
 
 
-.available {
-  background-color: rgb(14, 201, 11);
-}
+// .available {
+//   background-color: rgb(14, 201, 11);
+// }
 
 
 
-.btn-container {
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
+// .btn-container {
+//   display: flex;
+//   flex-direction: column;
+//   gap: 15px;
+// }
 
-.btn-admin {
-  height: 40px;
-  width: 100px;
-  border-radius: 4px;
-}
+// .btn-admin {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   border: none;
+//   border-radius: 50%;
+//   padding: 5px;
+//   img {
+//     width: 30px;
+//   }
+// }
