--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,12 +6,12 @@
       </div>
     </div>
     <div class="socials-row">
-      <a href="#" title="Use Google">
-        <img src="./../../../assets/images/google.png" alt=""/>
+      <a [routerLink]="['/parking-state']" title="Use Google">
+        <img src="./../../../assets/images/google.png" alt="Sign in with Google"/>
         Sign in with Google
       </a>
-      <a href="#" title="Use Apple">
-        <img src="./../../../assets/images/apple.png" alt=""/>
+      <a [routerLink]="['/parking-state']" title="Use Apple">
+        <img src="./../../../assets/images/apple.png" alt="Sign in with Apple"/>
         Sign in with Apple
       </a>
     </div>
