--- a/Public/styles/colors.scss
+++ b/Public/styles/colors.scss
@@ -1,5 +1,9 @@
 $primary-color : #034cbe;
-$font-color: rgb(23, 23, 23);
-$inverted-font-color: white;
-$success-color: green;
-$warning-color: rgb(255, 100, 100);
+$font-color: #fff;
+$border-color: #fff;
+$inverted-font-color: #000;
+$success-color: rgb(23, 216, 23);
+$warning-color: rgb(219, 24, 24);
+$bg-color: #333;
+$available-color: greenyellow;
+$occupied-color: yellow;    
