--- a/src/app/pages/parking-state/parking-state.component.scss
+++ b/src/app/pages/parking-state/parking-state.component.scss
@@ -1,22 +1,13 @@
 @use "./../../../../Public/styles/tables.scss";
+@use "./../../../../Public/styles/colors.scss";
 
-// body {
-//   background-color: #333;
-//   height: 100vh;
-//   font-family: Arial, Helvetica, sans-serif;
-// }
 
-// header {
-//   background-color: #333;
-//   display: flex;
-//   justify-content: space-between;
-//   align-items: center;
-//   min-height: 15vh;
-//   .logo-container {
-//     font-size: 3rem;
-//     color: blue;
-//     border-bottom: 3px solid blue;
-//   }
+main {
+  height: 100%;
+}
+
+
+
 //   a {
 //     border-radius: 50%;
 //     overflow: hidden;
@@ -136,10 +127,6 @@
 //   }
 // }
 
-// .actions-container {
-//   display: flex;
-//   justify-content: center;
-
 //   button {
 //     border: none;
 //     background-color: blue;
@@ -150,21 +137,7 @@
 //     margin: 0 15px;
 //   }
 
-//   .btn-deleteThat {
-//     width: 50px;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     background-color: rgb(255, 0, 0);
-//     border: none;
-  
-//     i, .fi {
-//         display: flex;
-//         justify-content: center;
-//         align-items: center;
-//       }
-//     }
-//   }
+
 
 
 // .available {
