--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	font-family: Arial, Helvetica, sans-serif;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -32,6 +33,7 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
+
 ol, ul {
 	list-style: none;
 }
@@ -48,8 +50,9 @@ table {
 	border-spacing: 0;
 }
 
+
+
 a {
-	color: red;
 	text-decoration: none;
 }
 
@@ -62,4 +65,8 @@ a {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+}
+
+button {
+	border: none;
 }
