--- a/Public/styles/tables.scss
+++ b/Public/styles/tables.scss
@@ -43,6 +43,7 @@ main {
       margin: 0 10px; 
       padding: 0;
       background: none;
+      cursor: pointer;
       img {
         width: 30px;
         padding: 5px;
@@ -91,6 +92,7 @@ main {
     background: none;
     margin: 10px;
     transition: 0.125s;
+    cursor: pointer;
     &:hover {
       opacity: 0.7;
     }
@@ -108,6 +110,7 @@ main {
       color: colors.$font-color;
       font-size: 1rem;
       margin: 10px;
+      cursor: pointer;
       transition: 0.125s;
 
       &:hover {
