--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -34,7 +34,7 @@
     <div class="my-form__actions">
       <div class="my-form__row">
         <span>Don't have an account?</span>
-        <a title="Create Account">
+        <a [routerLink]="['/register']" title="Create Account">
           Sign Up
         </a>
       </div>
