--- a/src/app/pages/register/register.component.scss
+++ b/src/app/pages/register/register.component.scss
@@ -1,3 +1,6 @@
+@use "./../../../../Public/styles/colors.scss";
+@use "./../../../../Public/styles/forms.scss";
+
 main {
   font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
@@ -12,189 +15,4 @@ main {
   background-size: cover;
   background-color: rgba(95, 0, 93, 0.3);
   background-blend-mode: overlay;
-}
-
-.login-box {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  position: relative;
-  gap: 1rem;
-  padding: 3rem 2rem;
-  height: fit-content;
-  background-color: rgba(255, 255, 255, 0.2);
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  backdrop-filter: blur(5px);
-}
-
-.title-row {
-  margin-bottom: 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  text-align: center;
-  align-items: center;
-}
-
-.welcome-message {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  h1 {
-    font-size: 2.5rem;
-    color: #fff;
-  }
-}
-
-.socials-row {
-  display: flex;
-  gap: 1rem;
-  img {
-    width: 1.5rem;
-    height: auto;
-    padding: 0;
-  }
-  a {
-    padding: 0px 15px;
-    border-radius: 0.5rem;
-    width: 100%;
-    min-height: 3rem;
-    display: flex;
-    gap: 0.75rem;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    font-size: 1.1rem;
-    color: #1d1d1d;
-    border: 1px solid #f4f4f6;
-    background: #fff;
-    transition: all 0.3s ease;
-    font-weight: 700;
-    white-space: nowrap;
-    &:hover {
-      border: 1px solid #605dff;
-    }
-  }
-}
-
-.welcome-message {
-  max-width: 24rem;
-}
-
-.lines {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  display: flex;
-  gap: 1rem;
-  font-weight: bold;
-  align-items: center;
-  color: #fff;
-}
-
-.line {
-  height: 2px;
-  flex: 1;
-  background: #f4f4f6;
-
-}
-.text-fields {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-}
-.text-fields-columns { // cambie
-  display: flex;
-  gap: 2rem;
-}
-
-.column {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-.text-field {
-  display: flex;
-  flex-direction: column;
-  gap: 0.3rem;
-  input, select {
-    font-size: 1.3rem;
-    color: #1d1d1d;
-    width: 100%;
-    border: 1px solid var(--border);
-    min-height: 2.7rem; //cambie
-    letter-spacing: 0.03rem;
-    transition: 0.25s;
-    border-radius: 0.5rem;
-    text-indent: 1.25rem;
-  }
-  label {
-    color: #fff;
-    font-size: 1.1rem;
-  }
-}
-
-#email {
-    width: 100%;
-}
-
-.error-message {
-  display: none;
-}
-
-.text-field input:focus {
-  border: 1px solid #605dff;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 1px 4px 0px;
-}
-
-.my-form__button {
-  background: #605dff;
-  border: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 1rem;
-  cursor: pointer;
-  min-height: 3.125rem;
-  border-radius: 0.5rem;
-  &:hover {
-    background: #4a00e0;
-  }
-  a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 1.5rem;
-    font-weight: bold;
-  }
-}
-
-/* my form actions */
-.my-form__actions {
-  display: flex;
-  flex-direction: column;
-  align-self: center;
-  width: 100%;
-  justify-content: space-between;
-  color: #1d1d1d;
-  gap: 1rem;
-  margin-top: 0.5rem;
-  a {
-    color: #fff;
-    font-weight: 600;
-    text-decoration: none;
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-}
-
-.my-form__row {
-  display: flex;
-  gap: 0.5rem;
-  justify-content: space-between;
-  span {
-    color: #fff;
-    font-size: 1.1rem;
-  }
 }
