--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -10,11 +10,11 @@
         <div class="column">
           <div class="text-field">
             <label for="name">Name</label>
-            <input type="text" id="nombre" name="Nombre" placeholder="Your Name" ngModel required/>
+            <input type="text" id="nombre" name="name" placeholder="Your Name" ngModel required/>
           </div>
           <div class="text-field">
             <label for="username">Username</label>
-            <input type="text" id="usuario" name="usuario" placeholder="your_username" ngModel required/>
+            <input type="text" id="usuario" name="username" placeholder="your_username" ngModel required/>
           </div>
           <div class="text-field">
             <label for="password">Password</label>
@@ -23,8 +23,8 @@
         </div>
         <div class="column">
           <div class="text-field">
-            <label for="name">Surname (Optional)</label>
-            <input type="text" id="nombre" name="Nombre" placeholder="Your Surname" ngModel required/>
+            <label for="name">Last Name (Optional)</label>
+            <input type="text" id="nombre" name="lastName" placeholder="Your Last Name" ngModel required/>
           </div>
           <div class="text-field">
             <label for="username">Select Gender</label>
