--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -22,7 +22,7 @@
     </div>
     <div class="text-field">
       <label for="email">Username or email</label>
-      <input type="text" id="usuario" name="usuario" placeholder="Username" ngModel required/>
+      <input type="text" name="username" placeholder="Username" ngModel required/>
     </div>
     <div class="text-field">
       <label for="password">Password</label>
