--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -10,11 +10,11 @@
         <div class="column">
           <div class="text-field">
             <label for="name">Name</label>
-            <input type="text" id="nombre" name="name" placeholder="Your Name" ngModel required/>
+            <input type="text" id="name" name="name" placeholder="Your Name" ngModel required/>
           </div>
           <div class="text-field">
             <label for="username">Username</label>
-            <input type="text" id="usuario" name="username" placeholder="your_username" ngModel required/>
+            <input type="text" id="username" name="username" placeholder="your_username" ngModel required/>
           </div>
           <div class="text-field">
             <label for="password">Password</label>
@@ -23,11 +23,11 @@
         </div>
         <div class="column">
           <div class="text-field">
-            <label for="name">Last Name (Optional)</label>
-            <input type="text" id="nombre" name="lastName" placeholder="Your Last Name" ngModel required/>
+            <label for="lastName">Last Name (Optional)</label>
+            <input type="text" id="lastName" name="lastName" placeholder="Your Last Name" ngModel required/>
           </div>
           <div class="text-field">
-            <label for="username">Select Gender</label>
+            <label for="gender">Select Gender</label>
             <select id="gender" name="gender">
               <option value="male">Male</option>
               <option value="female">Female</option>
@@ -35,14 +35,14 @@
             </select>
           </div>
           <div class="text-field">
-            <label for="password">Confirm Password</label>
-            <input id="password" type="password" name="password" placeholder="Password" ngModel required/>
+            <label for="cpassword">Confirm Password</label>
+            <input id="cpassword" type="password" name="cpassword" placeholder="Password"/>
           </div>
         </div>
       </div>
       <div class="text-field">
         <label for="email">Email</label>
-        <input type="email" id="email" name="email" placeholder="your-email@example.com" ngModel required/>
+        <input type="email" id="email" name="email" placeholder="your-email@example.com"/>
       </div>
     </div>
     <button [disabled]="registerForm.invalid" type="submit" class="my-form__button">
